- redirecting / to swagger page - adding controller skeleton - fixing kotlin generator options - refactoring yaml to be more descriptive and fixing spelling - adding http error with possible return messages
